--- a/client/style.css
+++ b/client/style.css
@@ -1,116 +1,98 @@
-body {margin:0;background-color:#eee;display:flex;align-items:center;justify-content:center;height:100vh;}
+body {margin:0;background-color:#ccc;display:flex;align-items:center;justify-content:center;height:100vh;}
 
-.jr-chatroom {
-	min-width: 300px;
-	width: 520px;
-	position: relative;
+[contentEditable]:empty:before {
+  content: attr(data-text);
+  opacity: .5;
+}
+
+.jr-section {
+	min-width: 320px;
+	min-height: 360px;
+	width: 680px;
+	height: 360px;
 	background-color: #fff;
-	font: 16px/1.25 sans-serif;
-	color: #444;
+	overflow: hidden;
+	display: flex;
+	font: 16px/1.3 sans-serif;
+	color: #111;
 }
 
-.jr-chatroom > .tophead {
-	line-height: 48px;
-	text-align: center;
-	background-color: #34495e;
-	color: #eee;
-}
-
-.jr-chatroom > .chatzone .message {
-	height: 342px;
-	padding: 0 10px;
-	margin-bottom: 48px;
+.jr-section * {
 	box-sizing: border-box;
-	overflow-y: scroll;
 }
 
-.jr-chatroom > .chatzone .message .items {
-	margin: 8px 0;
+.jr-primary {
 	display: flex;
 	flex-direction: column;
-	flex-wrap: wrap;
+	align-items: stretch;
+	flex: .65;
 }
 
-.jr-chatroom > .chatzone .message .usr_name {
-	font-size: 10px;
-	color: #aaa;
+.jr-chatname {
+	padding-left: 16px;
+	border-bottom: 1px solid #eee;
+	font-weight: bold;
+	flex: 54px 0 0;
+	align-items: center;
+	display: flex;
 }
 
-.jr-chatroom > .chatzone .message .usr_message {
-	background-color: #ecf0f1;
-	max-width: calc(100% * .8);
-	margin: 4px 0 0 10px;
-	box-sizing: border-box;
-	border-radius: 3px;
-	padding: 5px 7px;
-	display: inline-table;
-	word-wrap: break-word;
-	word-break: break-all;
+.jr-chatlogs {
+	flex: 1 0 0;
 }
 
-.jr-chatroom > .chatzone .message .items > .usr_message:nth-child(2) {
-	border-top-left-radius: 1px;
-	border-top-right-radius: 10px;
+.jr-chatacts {
+	flex: 54px 0 0;
+	align-items: stretch;
+	flex-direction: row;
+	display: flex;
+	border-top: 1px solid #eee;
 }
 
-.jr-chatroom > .chatzone .message .items > .usr_message:last-child {
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 10px;
+.jr-chatacts > * {
+	flex: 0 0 53px;
+	border-right: 1px solid #eee;
 }
 
-.jr-chatroom > .chatzone .message .client {
-	flex-wrap: wrap-reverse;
-}
-
-.jr-chatroom > .chatzone .message .client .usr_message {
-	background-color: #2980b9;
-	color: #fff;
-}
-
-.jr-chatroom > .chatzone .message .client > .usr_message:first-child {
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;	
-}
-
-.jr-chatroom > .chatzone .message .client > .usr_message:nth-child(2) {
-	border-radius: 3px;
-}
-
-.jr-chatroom > .chatzone .message .client > .usr_message:last-child {
-	border-bottom-left-radius: 10px;
-	border-bottom-right-radius: 1px;
-}
-
-.jr-chatroom > .chatzone .form_message {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	z-index: 3;
-	width: 100%;
-	max-height: 48px;
-	background-color: #34495e;
-}
-
-.jr-chatroom > .chatzone .form_message > input {
+.jr-msginput {
+	flex: 1 0 0;
+	max-width: calc(100% - 159px);
+	padding: 8px;
 	outline-width: 0;
-	border-width: 0;
-	background-color: transparent;
-	font: inherit;
-	box-sizing: border-box;
-	color: #eee;
-	padding: 14px 8px;
+	word-break: break-all;
+	white-space: pre-wrap;
+	overflow-y: hidden;
 }
 
-.jr-chatroom > .chatzone .form_message > input[type="text"] {
-	width: calc(100% - 72.4376px);
+.jr-msginput:hover {
+	overflow-y: auto;
 }
 
-.jr-chatroom > .chatzone .form_message > input[type="submit"] {
-	width: 68px;
-	cursor: pointer;
-	transition: background-color 200ms ease;
+.jr-msgsents {
+	border-right-width: 0;
 }
 
-.jr-chatroom > .chatzone .form_message > input[type="submit"]:hover {
-	background-color: #2980b9;
+.jr-secondary {
+	flex: .35;
+	border-left: 1px solid #eee;
+	display: flex;
+	flex-direction: column;
+	align-items: stretch;
+}
+
+.jr-secondary > * {
+	border-bottom: 1px solid #eee;
+}
+
+.jr-onlines {
+	flex: 0 0 54px;
+}
+
+.jr-profile {
+	flex: 0 0 92px;
+}
+
+.jr-menbers {
+	flex: 1 0 0;
+	border-top-width: 0;
 }
